@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mms] Re-enable drag/drop of text to dynamic plaintext compose window (Bug #13281).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -3697,7 +3697,7 @@
    <date>2014-07-08</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mms] Re-enable drag/drop of text to dynamic plaintext compose window (Bug #13281).
    </notes>
   </release>
  </changelog>
